Make the sync script handle sub-versions, downgrade language level.